--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 Project Starburst/UserSettings/EditorUserSettings.asset
+Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
