--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
