--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
