--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 Project Starburst/UserSettings/EditorUserSettings.asset
+/Project Starburst/UserSettings
+/Project Starburst/ProjectSettings
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Packages/packages-lock.json
