--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/UserSettings/EditorUserSettings.asset
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
