--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/UserSettings/EditorUserSettings.asset
