--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
+Project Starburst/Packages/packages-lock.json
