--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
