--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/UserSettings/EditorUserSettings.asset
