--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
