Level 1 Pre Audio

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/Assets/Fonts/Akronim-Regular SDF.asset
