--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/UserSettings/EditorUserSettings.asset
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/Assets/Fonts/Akronim-Regular SDF.asset
+Project Starburst/Packages/packages-lock.json
+Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+Project Starburst/ProjectSettings/ProjectVersion.txt
+Project Starburst/UserSettings/EditorUserSettings.asset
