--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ Project Starburst/Packages/packages-lock.json
 Project Starburst/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 Project Starburst/ProjectSettings/ProjectVersion.txt
 Project Starburst/UserSettings/EditorUserSettings.asset
+Project Starburst/Packages/packages-lock.json
+*.json
